--- a/web/index.html
+++ b/web/index.html
@@ -24,10 +24,10 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="ecoquest">
-  <link rel="apple-touch-icon" href="ecoquest.png">
+  <link rel="apple-touch-icon" href="ecoquest.jpeg">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="ecoquest.png"/>
+  <link rel="icon" type="image/jpeg" href="ecoquest.jpeg"/>
 
   <title>EcoQuest</title>
   <link rel="manifest" href="manifest.json">
